# team4-reuben-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  data.py  eval_pipeline.py  eval_ui.py  judge.py  labs.py  ocr.py  patients.py  pyproject.toml
templates/: base.html  eval_image.html  eval_index.html  facesheet.html  labs.html  mobile.html  note.html
tests/: conftest.py  test_api.py  test_labs.py  test_ocr.py  test_patients.py
tools/: vignettes_to_docx.py
