[project]
name = "image-text-reader"
version = "0.1.0"
description = "Web tool that reads/analyzes images using the MedGemma vision-language model"
# torch has no wheels for 3.13+ yet — pin to 3.11/3.12
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "qrcode>=7.4",
    "transformers>=4.53",
    "torch>=2.4",
    "accelerate>=1.0",
    "pillow>=10.4",
    "huggingface-hub>=0.26",
    "anthropic>=0.40",
]

[tool.uv]
package = false
